[🚚 CI] Generate build from main
